--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MySqlConnection" : "server=localhost;user=root;password=123456;database=bioseguridad;"
+    "MySqlConnection" : "server=localhost;user=root;password=campus2024;database=bioseguridad;"
   }
 }
