--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;user=root;password=123456;database=bioseguridad;"
+    "MySqlConnection": "server=localhost;user=root;password=campus2024;database=bioseguridad;"
   }
 }
